# ns-lookup-mcp

./: README.md  pyproject.toml
.cursor/rules/: commit-message-format.mdc  project-purpose.mdc  respect-manual-changes.mdc
src/ns_lookup_mcp/: __init__.py  __main__.py  logging.py  server.py
